# cydrust

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FIXES_APPLIED.md  Justfile  README.md  RUST_CODE_REVIEW.md  SECURITY.md  cliff.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  hardware_question.md
.github/workflows/: ci-bridge.yml  ci-firmware.yml  ci.yml  firmware-release.yml  label.yml  pr-title.yml  release.yml  security.yml
bridge/: Cargo.toml  config.example.toml  deny.toml
bridge/src/: collector.rs  collector_codex.rs  collector_hermes.rs  collector_opencode.rs  federation.rs  hub.rs  lib.rs  main.rs  metrics.rs  model.rs  state.rs  usage.rs
bridge/tests/: collector_test.rs  integration_test.rs
docs/: api.md  architecture.md  development.md  hardware.md  social-preview-spec.md
docs/assets/: README.md  banner.html
firmware/: Cargo.toml  RELEASES.md  deny.toml  package.ps1  package.sh  partitions_ota.csv  sdkconfig.defaults  sdkconfig.defaults.ble  sdkconfig.defaults.ota
firmware/.cargo/: config.toml
firmware/src/: ble.rs  eink.rs  icons.rs  main.rs  ota.rs
scripts/: wsl-cyd-up.sh
