[package]
name = "vibe-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "vibe_bridge"
path = "src/lib.rs"

[[bin]]
name = "vibe-bridge"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs-next = "2"
# serial bridge binary only
serialport = "4"
ureq = "2"
# hub: read OpenCode/Hermes SQLite databases (read-only)
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"