[workspace]

[package]
name = "vibe-firmware"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = []    # USB transport (no WiFi) — corporate default
wifi = []       # enable WiFi transport: cargo build --features wifi
# OTA firmware updates over WiFi (esp_https_ota). Requires the `wifi` feature
# and the OTA partition table (see sdkconfig.defaults.ota / partitions_ota.csv).
# Build: cargo +esp build --features wifi,ota
ota = ["wifi"]
# BLE transport: receive newline-delimited JSON frames over a writable GATT
# characteristic instead of USB serial (no WiFi, no USB data). Mutually
# exclusive with `wifi` at the transport-selection cfg in main.rs.
# Requires the BLE sdkconfig layer (see sdkconfig.defaults.ble).
# Build: $env:ESP_IDF_SDKCONFIG_DEFAULTS='sdkconfig.defaults;sdkconfig.defaults.ble'
#        cargo +esp build --features ble
ble = ["dep:esp32-nimble"]
# e-ink variant: drive a low-power monochrome SPI e-paper panel (Waveshare
# 2.9"/2.13" B/W, SSD1680/IL3820) INSTEAD of the colour ST7789 LCD. This is a
# separate, simplified, glanceable status view (not the tabbed colour UI) that
# full-refreshes slowly to honour e-paper longevity + low power. The USB stdin
# transport is shared; only the DISPLAY half changes. Mutually exclusive with
# the colour-LCD path via the cfg-selection in main.rs. The default (no-feature)
# build is unaffected — no eink symbols compile.
# epd-waveshare 0.6 targets embedded-hal 1.0 — matches our `embedded-hal = "1"`.
# Build: $env:CARGO_TARGET_DIR='C:\t'; cargo +esp build --features eink
eink = ["dep:epd-waveshare"]

[[bin]]
name = "vibe-firmware"
path = "src/main.rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = false

[dependencies]
esp-idf-svc = { version = "0.50", features = ["std", "embassy-time-driver"] }
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
embedded-graphics = "0.8"
embedded-svc = "0.28"
mipidsi = "0.8"
display-interface-spi = "0.5"
embedded-hal = "1"
serde = { version = "1", features = ["derive"] }
serde-json-core = "0.5"
heapless = "0.8"
log = "0.4"
anyhow = { version = "1", features = ["std"] }
# BLE GATT server (NimBLE). Optional — only pulled in by the `ble` feature.
#
# Version pin is a known tension (see sdkconfig.defaults.ble / module docs):
#   • 0.9.0 / 0.10.x accept esp-idf-svc ^0.50 (our pin) but declare the
#     now-removed `#![feature(inline_const_pat)]`, so they FAIL to compile on
#     the current esp nightly (rustc 1.95) with "const blocks cannot be used as
#     patterns".
#   • 0.11.1+ removed that feature and compile cleanly, but require
#     esp-idf-svc ^0.51. Bumping esp-idf-svc to 0.51 regressed the DEFAULT
#     (non-ble) build with an embassy-executor `__pender` link error, which the
#     project's hard "default build unchanged" rule forbids.
# We therefore pin 0.9 to keep esp-idf-svc at 0.50 and the default build safe.
# The BLE source is written against this crate's (stable) public API; to build
# it, use an esp toolchain whose rustc still supports inline_const_pat, OR bump
# the firmware to esp-idf-svc 0.51 + esp32-nimble 0.11.1 once the executor
# integration is resolved. See the build notes in sdkconfig.defaults.ble.
esp32-nimble = { version = "0.9", optional = true }
# e-paper driver (optional — only pulled in by the `eink` feature).
# 0.6 uses embedded-hal 1.0 (SpiDevice/OutputPin/InputPin/DelayNs), which is the
# same major as our `embedded-hal = "1"`, so the esp-idf-hal SpiDeviceDriver /
# PinDriver / Delay implementations satisfy its bounds directly. Supports the
# common Waveshare B/W panels (2.9" SSD1680/IL3820, 2.13", 1.54", etc.).
epd-waveshare = { version = "0.6", optional = true }

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }